[package]
name = "interactive-demo"
version = "0.0.1"
authors = ["T. Post", "Robert Vojta <rvojta@me.com>"]
edition = "2018"
description = "Interactive demo for crossterm."
license = "MIT"
exclude = ["target", "Cargo.lock"]
readme = "README.md"
publish = false

[dependencies]
crossterm = { path = "../../" }

[patch.crates-io]
mio = { path = "../../../mio" }
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "epoll" }
libc = { path = "../../../libc" }
socket2 = { path = "../../../socket2", version = "0.4.9"}